--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@
   <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
-
-    
-    <!-- My CSS -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <!-- My CSS -->
     <link rel="stylesheet" href="page.css">
     
     <title>Segítség Szíriában</title>
