--- a/index.html
+++ b/index.html
@@ -233,6 +233,20 @@
                 </div>
 
           </article>
+          <footer class="hatter">
+              <div id="eltartas">
+                <div style="overflow: auto; max-width: 1050px; margin: auto;" id="tartalma">
+                  <div><img src="images/maltai_logo.svg" style="float: left; margin-right: 4%; margin-bottom: 30px; padding-top: 0.5%" alt=""></Div>
+                  <div id="szoveg"> 
+                    <p style="margin-top: 0px;">A weblapon és a program során használt képeket Agnes Mariam, Bielik István és Solymári Dániel készítették. 
+                        Külön köszönet Bielik Istvánnak, hogy közreműködésével nagymértékben hozzájárult a kezdeményezéshez.</p>
+
+                    <p> Az általunk közölt tartalom nem hordoz politikai állásfoglalást. Munkánk során vallásilag és világnézetileg semleges módon, kizárólag a humanitárius rászorultság alapján nyújtunk segítséget.</p>
+                  </div>
+                </div>
+              </div>
+            <Div class="piros_sav"></Div>
+          </footer>
           <script src="hatter_szin.js"></script>
           <script src="hamburger.js"></script>
           <script src="videovalaszto.js"></script>
