--- a/index.html
+++ b/index.html
@@ -61,11 +61,11 @@
             <iframe id="filmkerete" class="resp-iframe" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> 
         </div>
         <div id="videoValasztas">
-            <div id="elso" class="filmecskek" style="display: none;" onclick="valtas(0)">1</div>
-            <div id="masodik" class="filmecskek" onclick="valtas(1)">2</div>
-            <div id="harmadik" class="filmecskek" onclick="valtas(2)">3</div>
-            <div id="negyedik" class="filmecskek"  onclick="valtas(3)">4</div>
-            <div id="otodik" class="filmecskek"  onclick="valtas(4)">5</div>
+            <div id="elso" class="filmecskek" style="display: none;" onclick="valtas(0)"><img src="images/filmek/uzenet.jpg" alt="">Az üzenet</div>
+            <div id="masodik" class="filmecskek" onclick="valtas(1)"><img src="images/filmek/segitseg.jpg" alt="">A segítség</div>
+            <div id="harmadik" class="filmecskek" onclick="valtas(2)"><img src="images/filmek/kozosseg.jpg" alt="">A közösség</div>
+            <div id="negyedik" class="filmecskek"  onclick="valtas(3)"><img src="images/filmek/talalkozas.jpg" alt="">A találkozás</div>
+            <div id="otodik" class="filmecskek"  onclick="valtas(4)"><img src="images/filmek/aldas.jpg" alt="">Az áldás</div>
         </div>
         </section>  
     </div>
@@ -236,8 +236,8 @@
           <footer class="hatter">
               <div id="eltartas">
                 <div style="overflow: auto; max-width: 1050px; margin: auto;" id="tartalma">
-                  <div><img src="images/maltai_logo.svg" style="float: left; margin-right: 4%; margin-bottom: 30px; padding-top: 0.5%" alt=""></Div>
-                  <div id="szoveg"> 
+                   <div id="logotarto"><img src="images/maltai_logo.svg" alt=""></Div>
+                    <div id="szoveg">               
                     <p style="margin-top: 0px;">A weblapon és a program során használt képeket Agnes Mariam, Bielik István és Solymári Dániel készítették. 
                         Külön köszönet Bielik Istvánnak, hogy közreműködésével nagymértékben hozzájárult a kezdeményezéshez.</p>
 
