--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
   <body>
     <header>
         <div id="nagy_kep" style="position: relative;">
-            <div style="position: absolute; bottom: 0px; width: 100%; height: 50%; 
+            <div style="position: absolute; bottom: -1px; width: 100%; height: 50%; 
              background: linear-gradient(180deg, rgba(0,0,0,0)0%, rgba(0,0,0,1)100%);"></div>
              <div style="position: absolute; bottom: 0px; width: 50%; height: 100%; 
              background: linear-gradient(270deg, rgba(0,0,0,0)0%, rgba(0,0,0,1)100%);"></div>
             <div id="cim">
-                <img src="images/maltai_logo.svg" alt="Máltai logo" height="55px" id="logo_kepen" />
+                <img src="images/maltai_logo.svg" alt="Máltai logo" id="logo_kepen" />
                 <h1>Imádságot<br/>kérünk</h1>
                 <hr id="cim_alatti_vonal">
                 <p class="idezet">„Ha szenved az egyik tag,<br/>valamennyi együtt szenved vele” </p>
@@ -88,10 +88,10 @@
            Mindmáig sok a sérült – ellátásuk azonban annál bizonytalanabb. A város keleti részében egészségügyi, higiénés szolgáltatások, víz, villany a mai napig nincsenek, vagy erősen hiányosak. Az orvosok, az ápolók, az egészségügyi és más szakemberek a támadások áldozataivá váltak, vagy a gyakran havi 30 dolláros fizetéssel járó állások helyett otthonaik elhagyására kényszerültek. A világ jelentős részét pedig túlságosan elfoglalja a vita, a vélelmezett bűnösök, politikai és vallási szereplők külső értékelése.  
         </p>
         <div class="keptarto">
-            <img src="images/haboru_1.jpg" alt="" style="width: 60%; margin-right: 2%; margin-bottom: 2%;">
-            <img src="images/haboru_2.jpg" alt="" style="width: 38%; margin-bottom: 2%;">
-            <img src="images/haboru_3.jpg" alt="" style="width: 40%; margin-right: 2%; float: left;">
-            <img src="images/haboru_4.jpg" alt="" style="width: 58%;">
+            <img src="images/haboru_1.jpg" alt="" id="haboru_1"  >
+            <img src="images/haboru_2.jpg" alt="" id="haboru_2"  >
+            <img src="images/haboru_3.jpg" alt="" id="haboru_3"  >
+            <img src="images/haboru_4.jpg" alt="" id="haboru_4"  >
         </div>
       </section>
       </div>
@@ -112,6 +112,10 @@
             <p class="kiemeles">
                 E pozitív folyamatot és növekvő terhelést tapasztalva 2017-ben úgy döntöttünk, hogy új kórházi szárnnyal bővítjük a meglévő épületet, duplájára növelve ezzel annak kapacitását. Új szakorvosi ellátó helyiségeket építettünk, férőszámot növeltünk. E program a Magyar Máltai Szeretetszolgálat egyik legjelentősebb nemzetközi vállalkozása. Az új szárny 2018 év végén nyitja meg kapuit.  
             </p>
+            <div class="keptarto">
+                    <img src="images/segitseg_1.jpg" id="segitseg_1" alt="">
+                    <img src="images/segitseg_2.jpg" id="segitseg_2" alt="">
+                </div>
             <p>
                 Az Aleppó körül izolált, elzárt falvakba azonban továbbra se jut el egészségügyi szolgáltatás, orvos, ápoló. Az ott élők gyógyszer és rendszeres orvosi segítség nélkül élnek. Ezért a Magyar Máltai Szeretetszolgálat úgy döntött, hogy évtizedes tapasztalatokra építve mobil orvosi (úgynevezett MOR-os) ellátást biztosít: ezért a Mar Yakub közösségével együttműködve 2018-tól mobil orvosi rendelőt működtetünk a környező falvakban. Szakképzett önkéntes és hivatásos mentős, ápoló vagy orvos kollégák a vidéki lakosságot látogatják, ahová egészségügyi szolgáltatás másként nem jutna el. Egyéni higiénés eszközöket, gyógyszert, kötszert osztanak. Közel 8000 családdal, összesen mintegy 40 000 egyéni rászorulóval tartanak folyamatos kapcsolatot. A kórházi ellátáson és mobil szolgálaton kívül rövid egészségügyi és életmentő tanfolyamokat, kurzusokat szerveznek, ugyanis máig mindennaposak a fel nem robbant lőszerek, gránátok miatti véletlen sérülések.
             </p>
@@ -128,9 +132,9 @@
                   Az eredetileg libanoni származású karmelita nővér, Agnes Mariam de la Croix, 1994-ben elhatározta, hogy újjáépíti a Damaszkusztól 30 kilométerre található és akkor még romokban állt, Feldarabolt Szt. Jakabról (421) elnevezett Mar Yakub kolostorát. Elhatározta, hogy egy keleti monasztikus hagyományokban gyökerező, de modern szellemiségű, befogadó, karitativitásra épülő görögkeleti, melkita szerzetesi közösséggel tölti meg azt. A hely rövid idő alatt virágzásnak indult, hamar megtelt hivatásokkal, vonzó „mikrokörnyezetet” hoztak létre az alapítók. A közösség egyik legfőbb karizmája a karitativitás. Így nem volt nehéz a Magyar Máltai Szeretetszolgálat és e sivatagi lelki központ egymásra találása.
                 </p>
                 <div class="keptarto">
-                    <img src="images/festes.jpg" style="width: 37%; margin-right: 2%;" alt="">
-                    <img src="images/apacak.jpg" style="width: 34.8%;margin-right: 2%;" alt="">
-                    <img src="images/szerzetes.jpg" style="width: 24%;" alt="">
+                    <img src="images/festes.jpg" id="festes" alt="">
+                    <img src="images/apacak.jpg" id="apacak" alt="">
+                    <img src="images/szerzetes.jpg" id="szerzetes" alt="">
                 </div>
                 <p>
                   A 2011–2012-ben kitört szíriai polgárháború azonban alapjaiban változtatta meg az ország és lakosságának életét. Emiatt a kolostor szokásos rendje is, az ima, a közösségi élet és a munka is jelentősen átalakult. Vezetői az elsők között keresték fel a háború kitörésekor súlyos támadásokat szenvedett Homsz rászoruló lakosságát, és juttattak be segélycsomagokat, élelmiszert. Befogadták az árván maradt, csellengő gyermekeket. Később e humanitárius szerepvállalás vált életük lényegévé. Ismert és elismert szereplőkké váltak a szíriai háborúban harcoló felek számára, egyaránt megbecsülik őket a felkelők és kormányerők is. Egyetlen célnak a kárvallott lakosság megsegítését tekintik, így minden féllel együttműködésre kényszerülnek, ezzel alkalmanként komoly politikai és biztonsági támadásoknak kitéve önmagukat. Az elnyomott és üldözött keresztényekkel szembeni atrocitások ellen hangosan szólalnak fel a nyugati sajtóban: a Maaloula kolostora elleni támadás után az elsők között látogattak oda, és a kivégzett keresztény szerzetesek szentté avatása ügyében is aktívak (maguk gyűjtötték össze a szinte még füstölgő puskagolyókat, hogy azokat a Szentszéknek átadhassák, kezdeményezve a kanonizációjukat). Aleppóban, Homszban, Rakkában és a leginkább terhelt területeken hiánypótló segélyezési munkát végeznek a helyi egyházakkal és más közösségekkel együttműködve. 
