--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
                 <hr id="cim_alatti_vonal">
                 <p class="idezet">„Ha szenved az egyik tag,<br/>valamennyi együtt szenved vele” </p>
                 <p class="kepala">(1Kor 12,26)</p>
+                <div><a href="#kiallitas"><img src="images/kiallitas_piros.svg" alt="" id="kiallitas_piros"></a></div>
              </div>
              
         </div>
