--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         
         <div id="bevezeto" style="position: relative;">
           <hr class="vastag" style="height: 4px;">
-          <p>A Közel-Keleten a véres összecsapások a mindennapok részévre váltak. A keresztények számának csökkenése kétségbeejtő méreteket öltött az elmúlt évek során. Ha ez a folyamat nem áll meg, akkor a kereszténység, ott és onnan, véglegesen eltűnik, ahol a bölcsője ringott. 2018. Adventjén a Magyar Máltai Szeretetszolgálat országos kampányt indít, amelynek címe, elnevezése: Őrizzük testvéreinket! Kérjük, nyíljék imára minél több ajak, és írják le támogató gondolataikat, imáikat. Néhány sort, vagy akár, csak egy szót. Küldjék el üzeneteiket nekünk, és mi vállaljuk, hogy átadjuk a szíriai Damaszkusztól 30 km-re található, a Feldarabolt Szent Jakabról elnevezett Mar Yakub kolostor elöljárójának.</p>
+          <p>A Közel-Keleten a véres összecsapások a mindennapok részévre váltak. A keresztények számának csökkenése kétségbeejtő méreteket öltött az elmúlt évek során. Ha ez a folyamat nem áll meg, akkor a kereszténység, ott és onnan, véglegesen eltűnik, ahol a bölcsője ringott. 2018. Adventjén a Magyar Máltai Szeretetszolgálat országos kampányt indít, amelynek címe, elnevezése: Imádságot kérünk. Kérjük, nyíljék imára minél több ajak, és írják le támogató gondolataikat, imáikat. Néhány sort, vagy akár, csak egy szót. Küldjék el üzeneteiket nekünk, és mi vállaljuk, hogy átadjuk a szíriai Damaszkusztól 30 km-re található, a Feldarabolt Szent Jakabról elnevezett Mar Yakub kolostor elöljárójának.</p>
           <hr>
         </div>
 
@@ -76,7 +76,10 @@
         <div class="resp-container">   
             <iframe id="filmkerete" class="resp-iframe" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> 
         </div>
-        <div style="padding: 20px 0px; margin: 20px 0px; border-top: 2px solid red; ">Ide jön majd valamiféle magyarázó szöveg</div>
+        <div style="padding: 20px 0px; margin: 20px 0px; border-top: 2px solid red; "><h4> A segítség és ami mögötte van </h4>
+
+             <p style="width: 100%; max-width: none;">Filmek humanitárius munkánk mindennapjairól, egy háborús fronthelyzetből.</p>
+            </div>
         <div id="videoValasztas">
             <div id="elso" class="filmecskek" style="display: none;" onclick="valtas(0)"><img src="images/filmek/uzenet.jpg" alt=""><p>Az üzenet</p></div>
             <div id="masodik" class="filmecskek" onclick="valtas(1)"><img src="images/filmek/segitseg.jpg" alt=""><p>A segítség</p></div>
