--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
                     megközelítés a főbejáraton keresztül, <span style="display: inline-block;">lifttel a kupola irányába</span></p>
 
                     <h4>Időpont:</h4> 
-                    <p style="margin: 5px 0px 0px 0px;"> 2018. december-február</p>
+                    <p style="margin: 5px 0px 0px 0px;"> 2018. december - 2019. február</p>
                 </div>                
                 <p>
                     <img src="images/kiallitas_ff.jpg" style="width: 100%; margin-bottom: 15px;" >
